src/objects/SensitiveConfigurations__c.object
<CustomObject>
    <fields>
        <fullName>TelegramChannelId__c</fullName>
        <label>Telegram Channel Id</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>TelegramTemplateMessage__c</fullName>
        <inlineHelpText>{sum} - total daily amount | 
{sum/2} - half of the total daily amount | 
{7} - 7 percent against total daily amount | 
{7/2} - 7 percent against half of the total daily amount | 
*bold text* | 
_italic text_</inlineHelpText>
        <label>Telegram Template Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TelegramToken__c</fullName>
        <label>Telegram Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>Configurations</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sensitive Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>